# jampack

./: .gitignore  Cargo.toml  LICENSE  README.md  binary-spec.md
examples/decode/: string.rs
examples/encode/: image.rs  simple.rs
src/: builtin.rs  jam.rs  jar.rs  lib.rs  lock.rs  main.rs  res.rs  stove.rs  util.rs
src/native/: fs.rs
src/web/: fs.rs
