[package]
name = "jampack"
version = "0.0.1"
edition = "2021"
authors = ["WrapFX"]
description = "Asynchronous asset encoding framework for apps and games"
license = "MIT"
#license-file = "LICENSE"
repository = "https://github.com/WrapFX/jampack"

[dependencies]
log = "0.4.17"
walkdir = "2.3.2"
pollster = "0.2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.2.4"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []