[package]
name = "jampack"
version = "1.0.0"
edition = "2021"
authors = ["WrapFX"]
description = "Lightweight, asynchronous and extensible asset framework made for use in games and apps."
license = "MIT"
#license-file = "LICENSE"
repository = "https://github.com/WrapFX/jampack"
keywords = ["game", "app", "engine", "gamedev", "jampack", "asset", "encoding", "decoding"]

[dependencies]
log = "0.4.17"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.2.5"
walkdir = "2.3.2"
sha1 = "0.10.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.2.4"

[dev-dependencies]
image = "0.24.4"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []