[package]
name = "jampack"
version = "1.0.1"
edition = "2021"
authors = ["Arujano"]
description = "Old project. Create a GitHub issue to request Crates.io ownership."
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
